try fix scrollbar visibility iphone

--- a/_sass/plain.scss
+++ b/_sass/plain.scss
@@ -248,7 +248,9 @@ main {
 }
 
 .navbar::-webkit-scrollbar {
-  display: none; }
+  display: none;
+  visibility: hidden;
+  }
 
 .navlink {
     text-decoration: none;
